<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/light_grey"
    tools:context=".activities.UploadArticuloActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_text"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:id="@+id/uploadArticuloText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_upload_article"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/green"/>

            <EditText
                android:id="@+id/etArticuloTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_text"
                android:hint="@string/text_article_title"
                android:textColor="@color/dark_grey"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="34dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/etArticuloDescription"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_text"
                android:hint="@string/text_article_description"
                android:textColor="@color/dark_grey"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="18dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:padding="8dp"/>

            <!-- cambiar color de los items del spinner -->
            <Spinner
                android:id="@+id/spinnerCategories"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_text"
                android:hint="@string/text_article_category"
                android:textColor="@color/dark_grey"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="18dp"
                android:padding="8dp"/>

            <EditText
                android:id="@+id/etArticuloPrice"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_text"
                android:hint="@string/text_article_price"
                android:inputType="numberDecimal"
                android:textColor="@color/dark_grey"
                android:textColorHighlight="@color/cardview_dark_background"
                android:layout_marginTop="18dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:padding="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="18dp">

                <TextView
                    android:id="@+id/txtImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_upload_image"
                    android:layout_marginStart="15dp"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:textColor="@color/green"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/txtImageUploaded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_image_uploaded"
                    android:layout_marginStart="15dp"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:visibility="gone"
                    android:textColor="@color/green"
                    android:layout_weight="1"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnUploadImage"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:backgroundTint="@color/green"
                    android:layout_gravity="end"
                    app:icon="@drawable/ic_upload_image"
                    app:iconSize="32dp"
                    app:iconGravity="textTop"
                    app:cornerRadius="10dp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btnUploadArticulo"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/button_upload_article"
                android:textSize="18sp"
                android:layout_marginTop="26dp"
                android:backgroundTint="@color/green"
                app:cornerRadius="20dp"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/button_cancel_article"
                android:textSize="18sp"
                android:backgroundTint="@color/green"
                app:cornerRadius="20dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>