<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/light_grey"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_text"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login"
                android:textSize="36sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/green"/>

            <EditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_text"
                android:drawableLeft="@drawable/ic_mailbox"
                android:drawablePadding="8dp"
                android:hint="@string/hint_email"
                android:textColor="@color/dark_grey"
                android:textColorHighlight="@color/cardview_dark_background"
                android:padding="8dp"
                android:layout_marginTop="34dp"/>

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_text"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="@color/dark_grey"
                android:textColorHighlight="@color/cardview_dark_background"
                android:padding="8dp"
                android:layout_marginTop="18dp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/button_login"
                android:backgroundTint="@color/green"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius="26dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtChangeToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_change_to_registration"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:padding="8dp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>